# sdig

./: AUTHORS  CHANGES  ChangeLog  Makefile.in  NEWS  README  TODO  autogen.sh  common.c  common.h  configure  configure.in  mactable  sdig.8  sdig.c  sdig.conf  sdig.conf.5  sdig.h  snmpget.c
contrib/sdig-cgi/: README.sdig-cgi  sdig-cgi.conf.sample  sdig-preamble  sdig.cgi
include/: config.h.in
src/: Makefile.am  common.c  common.h  config.c  output.c  query.c  sdig.c  sdig.h  snmpget.c  snmpget.h
