AC_INIT(src/sdig.c)
AM_INIT_AUTOMAKE(sdig, 0.42)
AC_CONFIG_HEADER(include/config.h)
AC_REVISION([$Id$])

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL

AC_CHECK_PROG(NET_SNMP_CONFIG, net-snmp-config, net-snmp-config)
if test x$NET_SNMP_CONFIG = x; then
	AC_MSG_ERROR(Need net-snmp to continue.)
else
	NET_SNMP_CFLAGS=`net-snmp-config --cflags`
	NET_SNMP_LIBS=`net-snmp-config --libs`
fi

AC_CHECK_LIB(nsl, inet_pton,
	     AC_DEFINE(HAVE_INET_PTON, 1, [Do we have inet_pton]))
AC_CHECK_FUNC(inet_aton,
	      AC_DEFINE(HAVE_INET_ATON, 1, [Do we have inet_aton]))
AC_CHECK_FUNC(inet_pton,
	      AC_DEFINE(HAVE_INET_PTON, 1), LIBS="$LIBS -lnsl")

AC_SUBST(NET_SNMP_CFLAGS)
AC_SUBST(NET_SNMP_LIBS)

AC_SUBST(HAVE_INET_PTON)
AC_SUBST(HAVE_INET_ATON)

CFLAGS="$CFLAGS -DCONFPATH=$sysconfdir"

AC_OUTPUT(Makefile src/Makefile)
